--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -8,13 +8,13 @@ html {
 body {
     width: 100%;
     height: 100%;
-    font-size: 14px;
+    font-size: 1.3em;
     font-family: 'Poppins', sans-serif;
     line-height: 1.4em;
     line-height: 1.5em;
     letter-spacing: 0.05em;
     font-weight: 300;
-    background-color: #ffffff;
+    background-color: #e9ecef;
     margin: 0;
     padding: 0;
     font-family: modern;
@@ -23,10 +23,45 @@ body {
 h1 {
     text-transform: uppercase;
 }
-a{
-    text-decoration: none;
+.h2, h2 {
+    font-size: 4rem;
 }
-
+a{
+    color: #212529;
+    text-decoration: none;
+}a:hover {
+     text-decoration: none;
+ }
+.boxes:hover{
+    background-color: #DEAC2F;
+}
+.boxes:hover > a{
+    color: #212529;
+}
+.boxes:hover > a .color-boxes >h2{
+    color: #e9ecef;
+}
+ul.products{
+    padding: 0;
+    margin: 0;
+}
+ul .arrow{
+    position: absolute;
+    margin-left: -35px;
+    width: auto;
+    height: 30px;
+    margin-top: -5px;
+}
+ul.products li{
+    font-size: 1.8em;
+    list-style: none;
+    margin: 20px 0px;
+}
+ul.products li img {
+    height: 25px;
+    margin-top: -5px;
+    padding-right: 5px;
+}
 header {
     height: auto;
     width: 100%;
@@ -128,7 +163,7 @@ header.c7n-small {
 
 .c7n-intro {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     z-index: 500;
     transform: translate(-50%, -50%);
@@ -141,7 +176,7 @@ header.c7n-small {
     line-height: 1em;
     color: rgba(20, 20, 20, 1);
     font-family: langdon;
-    text-shadow: -1px 1px #ffffff, -4px 4px 0 #000000;
+    text-shadow: -1px 1px #ffffff, -4px 4px 0 #212529;
     letter-spacing: 5px;
 }
 
