--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -31,6 +31,7 @@ a{
     text-decoration: none;
 }a:hover {
      text-decoration: none;
+     color: #e9ecef;
  }
 .boxes:hover{
     background-color: #DEAC2F;
