--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -19,6 +19,9 @@ body {
     padding: 0;
     font-family: modern;
 }
+::selection{
+    background-color: #D9D7EC;
+}
 
 h1 {
     text-transform: uppercase;
