fix(project): programm + style and Home (NO-TKT)

--- a/core/Access/View/login_view.html
+++ b/core/Access/View/login_view.html
@@ -1,10 +1,10 @@
 <h1 class="d-none title-take">Login</h1>
 <form method="post" action="">
     E-Mail:<br>
-    <input type="text" name="email" placeholder="harry@mail.com">
+    <input type="text" name="email" placeholder="harry@mail.com" required>
     <br>
     Password:<br>
-    <input type="password" name="password" value="">
+    <input type="password" name="password" value="" required>
     <br><br>
     <input type="submit" value="Submit">
 </form>
