--- a/core/Access/View/register_view.html
+++ b/core/Access/View/register_view.html
@@ -1,12 +1,12 @@
 <h1 class="d-none title-take">Register</h1>
 <form method="post" action="">
     Name:<br>
-    <input type="text" name="name" placeholder="harry"><br>
+    <input type="text" name="name" placeholder="harry" required><br>
     E-Mail:<br>
-    <input type="text" name="email" placeholder="harry@mail.com"><br>
+    <input type="text" name="email" placeholder="harry@mail.com" required><br>
     Password:<br>
-    <input type="password" name="password" value=""><br>
+    <input type="password" name="password" value="" required><br>
     Repeat password:<br>
-    <input type="password" name="password2" value=""><br><br>
+    <input type="password" name="password2" value="" required><br><br>
     <input type="submit" value="Submit">
 </form>
