--- a/application/ShoppingQueen/View/overview_products_view.html
+++ b/application/ShoppingQueen/View/overview_products_view.html
@@ -1,5 +1,5 @@
-<h1 class="d-none title-take">Shoppinglists</h1>
+<h1 class="d-none title-take">Products</h1>
 <div class="row">
-    {OVERVIEW_SHOPPINGLISTS}
+    {OVERVIEW_PRODUCTS}
 </div>
 
