fix(project): programm + style and Home (NO-TKT)

--- a/application/ShoppingQueen/View/create_view.html
+++ b/application/ShoppingQueen/View/create_view.html
@@ -3,6 +3,6 @@
     Name:<br>
     <input type="text" name="name" placeholder="name" required><br>
     Cost:<br>
-    CHF <input type="text" name="text" placeholder="15.60" value=""><br><br>
+    CHF <input type="text" name="cost" placeholder="15.60" value=""><br><br>
     <input type="submit" value="Submit">
 </form>
