fix(project): programm + style and Home (NO-TKT)

--- a/application/ShoppingQueen/View/missing_product_view.html
+++ b/application/ShoppingQueen/View/missing_product_view.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<h1 class="d-none title-take">Missing Product</h1>
+<form method="post" action="">
+    Your name:<br>
+    <input type="text" name="name" placeholder="" required><br>
+    Enter what product is missing:<br>
+    <input type="text" name="product" placeholder="" required><br><br>
+    <input type="submit" value="Submit">
+</form>
