--- a/core/Access/View/login_view.html
+++ b/core/Access/View/login_view.html
@@ -1,7 +1,7 @@
 <h1 class="d-none title-take">Login</h1>
 <form method="post" action="">
     E-Mail:<br>
-    <input type="text" name="email" placeholder="harry@mail.com" required>
+    <input type="text" name="email" placeholder="" required>
     <br>
     Password:<br>
     <input type="password" name="password" value="" required>
