--- a/core/Access/View/register_view.html
+++ b/core/Access/View/register_view.html
@@ -1,9 +1,9 @@
 <h1 class="d-none title-take">Register</h1>
 <form method="post" action="">
     Name:<br>
-    <input type="text" name="name" placeholder="harry" required><br>
+    <input type="text" name="name" placeholder="" required><br>
     E-Mail:<br>
-    <input type="text" name="email" placeholder="harry@mail.com" required><br>
+    <input type="text" name="email" placeholder="" required><br>
     Password:<br>
     <input type="password" name="password" value="" required><br>
     Repeat password:<br>
