--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -66,6 +66,9 @@ a{
     text-shadow: 1px 1px black;
     font-weight: bold;
 }
+.notExist:hover{
+    color: #212529;
+}
 ul.products{
     padding: 0;
     margin: 0;
