fix(p): removed most strings from view & replaced /w placeholder (0)

--- a/application/ShoppingQueen/View/detail_view.html
+++ b/application/ShoppingQueen/View/detail_view.html
@@ -35,6 +35,9 @@
 <form method="post" action="" >
     <select name="products" id="products">
         <option value="">-</option>
+        <!--BEGIN SELECT_PRODUCTS-->
+            <option value="{PRODUCT_ID}">{PRODUCT_NAME}</option>'
+        <!--END SELECT_PRODUCTS-->
         {DETAIL_ADD_PRODUCTS}
     </select>
     <input type="submit" name="submit" value="Add" ><br><br>
