--- a/application/ShoppingQueen/View/edit_product_view.html
+++ b/application/ShoppingQueen/View/edit_product_view.html
@@ -1,6 +1,6 @@
 <h1 class="d-none title-take">Edit</h1>
 <form method="post" action="">
     Name:<br>
-    {EDIT_CONTENT}
+    <input type="text" name="name" placeholder="name" value="{PRODUCT_NAME}" required>
     <input type="submit" value="Submit">
 </form>
